--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1401,9 +1401,9 @@ footer,
         padding: 0 $unit $unit/2;
         box-sizing: border-box;
       }
-      .overlay-content {
-        min-width: 48%;
-      }
+      // .overlay-content {
+      //   min-width: 48%;
+      // }
     }
   }
   .banner-search.overlay {
@@ -1454,7 +1454,7 @@ footer,
         border-radius: 2px;
       }
       .overlay-content {
-        padding: $unit/2 $unit $unit;
+        padding: $unit*1.5 $unit $unit 3%;
         .header-extra,
         .header-text {
           font-weight: 600;
@@ -1532,6 +1532,7 @@ footer,
 }
 
 .mdc-list-item {
+  height: $header-lower-height;
   .mdc-list-item__meta {
     padding-left: $unit*(3/4);
   }
