--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -12,11 +12,10 @@
                 </span>
               </h1>
               <p class="header-extra">
-                Charity and voluntary sector recruitment
+                Charity and voluntary sector recruitment&hellip;
               </p>
               <div class="mdc-card__actions">
                 <!-- <a href="/about" class="mdc-button">Find out more</a> -->
-                <a href="/search" class="mdc-button">Advanced search</a>
                 <div class="mdc-menu-anchor">
                   <button class="mdc-button" data-menu-target="#sectors-menu">
                     Sectors
@@ -97,6 +96,7 @@
                     </div>
                   </div>
                 </div>
+                <a href="/search" class="mdc-button">Advanced search</a>
               </div>
             </div>
           </div>
