--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -845,7 +845,7 @@ a {
   padding: 0;
   margin-bottom: 0;
   .mdc-chip {
-    margin: 0 $unit/2 $unit/2 0;
+    margin: 0 $unit/2 $unit/4 0;
   }
 }
 .top-jobs .top-job,
@@ -1452,6 +1452,16 @@ footer,
         max-width: 1080px;
         margin: 0 auto;
         border-radius: 2px;
+        .extra-options {
+          margin: $unit/2 0;
+          text-align: center;
+          font-size: 0.88rem;
+          color: #999;
+          a {
+            font-weight: 400;
+            color: #777;
+          }
+        }
       }
       .overlay-content {
         padding: $unit*1.5 $unit $unit 3%;
