--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -1,5 +1,6 @@
 <div class="container-fluid home-banner">
-  <div class="banner-search overlay" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');">
+  <!-- <div class="banner-search overlay" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');"> -->
+  <div class="banner-search overlay" style="background-image: url('http://cms.scvo.org/wp-content/uploads/2017/11/Teapot-Trust-09.jpg');">
     <div class="content page-content">
       <!-- <div class="mdc-typography--headline5">Charity and voluntary sector recruitment</div> -->
       <div class="overlay-content">
@@ -14,8 +15,8 @@
               <p class="header-extra">
                 Charity and voluntary sector recruitment&hellip;
               </p>
-              <div class="mdc-card__actions">
-                <!-- <a href="/about" class="mdc-button">Find out more</a> -->
+              <!-- <a href="/about" class="mdc-button">Find out more</a> -->
+              <!-- <div class="mdc-card__actions">
                 <div class="mdc-menu-anchor">
                   <button class="mdc-button" data-menu-target="#sectors-menu">
                     Sectors
@@ -97,7 +98,7 @@
                   </div>
                 </div>
                 <a href="/search" class="mdc-button">Advanced search</a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -157,9 +158,14 @@
             </div>
           </div>
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
               <div id="search-terms" class="mdc-chip-set"></div>
             </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="extra-options">
+                <a href="/browse">Browse</a> |
+                <a href="/search">Advanced</a>
+              </div>
           </div>
         </div>
       </form>
