--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -97,8 +97,8 @@
                     </div>
                   </div>
                 </div>
-                <a href="/search" class="mdc-button">Advanced search</a>
-              </div> -->
+                <a href="/search" class="mdc-button">Advanced search</a> -->
+              </div>
             </div>
           </div>
         </div>
@@ -163,8 +163,7 @@
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="extra-options">
-                <a href="/browse">Browse</a> |
-                <a href="/search">Advanced</a>
+                <a href="/browse">Browse</a><span class="noselect"> | </span><a href="/search">Advanced</a>
               </div>
           </div>
         </div>
