More styling changes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1456,15 +1456,15 @@ footer,
           margin: $unit/2 0;
           text-align: center;
           font-size: 0.88rem;
-          color: #999;
+          color: #777;
           a {
             font-weight: 400;
-            color: #777;
+            color: #555;
           }
         }
       }
       .overlay-content {
-        padding: $unit*1.5 $unit $unit 3%;
+        padding: $unit*2.5 $unit $unit*2 3%;
         .header-extra,
         .header-text {
           font-weight: 600;
@@ -1474,7 +1474,7 @@ footer,
           margin: 0;
         }
         .header-text {
-          padding: $unit 0;
+          padding: 0 0 $unit*1.5;
           font-size: 4.8rem;
           line-height: 4rem;
           letter-spacing: -0.2rem;
