--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -13,7 +13,7 @@
                 </span>
               </h1>
               <p class="header-extra">
-                Charity and voluntary sector recruitment&hellip;
+                Charity and voluntary sector recruitment
               </p>
               <!-- <a href="/about" class="mdc-button">Find out more</a> -->
               <!-- <div class="mdc-card__actions">
@@ -97,8 +97,8 @@
                     </div>
                   </div>
                 </div>
-                <a href="/search" class="mdc-button">Advanced search</a> -->
-              </div>
+                <a href="/search" class="mdc-button">Advanced search</a>
+              </div> -->
             </div>
           </div>
         </div>
@@ -165,6 +165,7 @@
               <div class="extra-options">
                 <a href="/browse">Browse</a><span class="noselect"> | </span><a href="/search">Advanced</a>
               </div>
+            </div>
           </div>
         </div>
       </form>
