--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1547,6 +1547,14 @@ footer,
     padding-left: $unit*(3/4);
   }
 }
+.browse {
+  .browse-title {
+    margin: $unit/2 0 $unit/2;
+  }
+  .mdc-list-item {
+    height: auto;
+  }
+}
 
 .home-jobs {
   background-color: $mdc-theme-secondary-light;
