--- a/sites/configurations/goodmoves/templates/pages/logout.hbs
+++ b/sites/configurations/goodmoves/templates/pages/logout.hbs
@@ -2,7 +2,7 @@
     <div class="mdc-card">
       <div class="mdc-card__info--vacancy">
         <div class="mdc-card__info--vacancy-title mdc-typography--headline4">
-          Logging out...
+          Logging out&hellip;
         </div>
       </div>
     </div>
