--- a/sites/configurations/scvo/templates/pages/page-home.hbs
+++ b/sites/configurations/scvo/templates/pages/page-home.hbs
@@ -4,8 +4,8 @@
       <div class="mdc-layout-grid">
         <h1 class="header-text">
           <span class="header-text-banner">
-            Hello,<br />
-            we're SCVO
+            <span class="normal">Hello,<br />
+            we're </span>SCVO
           </span>
         </h1>
         <p class="header-extra">
