--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3425,7 +3425,7 @@ h3,
 h4 {
   margin-bottom: $unit/2;
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
-  font-weight: $base-font-weight;
+  font-weight: $heading-light-font-weight;
   strong {
     font-weight: 700;
   }
