--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1,6 +1,6 @@
 @import "./node_modules/material-components-web/material-components-web.scss";
 @import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
-@import url('//fonts.googleapis.com/css?family=Montserrat:500,700|Open+Sans:400,600');
+@import url('//fonts.googleapis.com/css?family=Montserrat:500,700|Open+Sans:400,600,700');
 
 $unit: 1rem;
 $nav-height: 38px;
@@ -1974,7 +1974,7 @@ form#settled_status {
   color: white;
   padding: $unit 0 $unit*2.5;
   h2 {
-    font-weight: 800;
+    font-weight: $heading-font-weight;
     padding-bottom: $unit;
   }
 }
@@ -2051,7 +2051,7 @@ form#settled_status {
   h1.header-text {
     margin: 0 !important;
     color: #fff;
-    font-weight: 800;
+    font-weight: $heading-font-weight;
     font-size: 2.9rem;
     line-height: 3rem;
     letter-spacing: -0.06rem;
@@ -2819,7 +2819,7 @@ table.membership-fees {
 .mdc-card__actions {
   padding: $unit/2 $unit $unit;
   .mdc-card__action {
-    font-weight: 800;
+    font-weight: $heading-font-weight;
   }
   ul {
     width: 100%;
@@ -3241,7 +3241,7 @@ ul.breadcrumbs {
   }
   li:before {
     content: "\203A" !important;
-    font-weight: 800;
+    font-weight: $heading-font-weight;
     width: auto;
     padding: 0;
     margin: 0 $unit/2;
@@ -3251,7 +3251,7 @@ ul.breadcrumbs {
   li.pull-right:before,
   li:first-child:before {
     content: "" !important;
-    font-weight: 800;
+    font-weight: $heading-font-weight;
     margin: 0 !important;
     width: 0 !important;
   }
@@ -3425,9 +3425,9 @@ h3,
 h4 {
   margin-bottom: $unit/2;
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
-  font-weight: $heading-light-font-weight;
+  font-weight: $heading-font-weight;
   strong {
-    font-weight: 700;
+    font-weight: $heading-font-weight;
   }
 }
 p,
