--- a/sites/configurations/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/sites/configurations/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -164,7 +164,7 @@
           </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-          {{> menu_eu_are_valued}}
+          {{> menu_euarevalued}}
         </div>
         {{> related_posts}}
       </div>
