--- a/sites/configurations/scvo/templates/pages/page-eu-are-valued.hbs
+++ b/sites/configurations/scvo/templates/pages/page-eu-are-valued.hbs
@@ -8,7 +8,7 @@
           {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-          {{> menu_eu_are_valued}}
+          {{> menu_euarevalued}}
         </div>
         {{> related_posts}}
       </div>
