--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1,3 +1,7 @@
+@import "./node_modules/material-components-web/material-components-web.scss";
+@import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
+@import url('//fonts.googleapis.com/css?family=Montserrat:500,700|Open+Sans:400,500,600');
+
 $mdc-theme-primary: #42842A;
 $mdc-theme-primary-light: #538F3D;
 $mdc-theme-primary-dark: #244817;
@@ -35,10 +39,6 @@ $header-lower-height: 38px;
 $mobile-breakpoint: 599px;
 $mobile-landscape-breakpoint: 959px;
 $desktop-landscape-breakpoint: 1280px;
-
-@import "./node_modules/material-components-web/material-components-web.scss";
-@import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
-@import url('//fonts.googleapis.com/css?family=Montserrat:700,500|Open+Sans:400,500,600');
 
 body {
   background-color: $mdc-theme-footer-dark;
@@ -1475,10 +1475,10 @@ footer,
   background-color: $mdc-theme-secondary-light;
   padding: 0 $unit*1.5 $unit !important;
 }
-.currently-recruiting,
-.home-jobs {
-  box-shadow: $toolbar-shadow-reverse;
-}
+// .currently-recruiting,
+// .home-jobs {
+//   box-shadow: $toolbar-shadow-reverse;
+// }
 .home .tfn-latest {
   background-color: $mdc-theme-secondary-light;
   .mdc-typography--headline5 {
