--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -11,8 +11,8 @@ $base-font-family:                  "Open Sans", Helvetica, Arial, sans-serif;
 $base-font-weight:                  400;
 
 $heading-font-family:               "Montserrat", Helvetica, Arial, sans-serif;
-$heading-light-font-weight:         500;
 $heading-font-weight:               700;
+$heading-light-font-weight:         500;
 
 $footer-font-family:                "Open Sans", Helvetica, Arial, sans-serif;
 $footer-font-weight:                400;
@@ -2054,10 +2054,10 @@ form#settled_status {
           font-size: 4.8rem;
           line-height: 4rem;
           letter-spacing: -0.1rem;
-          .normal {
-            letter-spacing: -0.4rem;
-            font-weight: $heading-light-font-weight;
-          }
+          // .normal {
+          //   letter-spacing: -0.4rem;
+          //   font-weight: $heading-light-font-weight;
+          // }
         }
       }
     }
