--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -23,6 +23,9 @@
           <p>
             If you work for SDS or JCP please <a href="http://jobs.scvo.org.uk/Account/Login">log in here</a> to start the referral/application process.
           </p>
+          <p>
+             <a href="/privacy/community-jobs-scotland" target="_blank" rel="noopener">Read our full privacy notice</a>.
+          </p>
           <!-- {{#with data.primaryResponse.hits.hits.[0]._source ~}}
           Apply for {{{title}}}
           {{/with ~}} -->
