--- a/sites/configurations/fundingscotland/partials/fund/full.hbs
+++ b/sites/configurations/fundingscotland/partials/fund/full.hbs
@@ -9,7 +9,7 @@
       </a>
       <a class="mdc-tab" role="tab" aria-controls="panel-2">
         <span class="far fa-map-marker-alt fa-fw" aria-hidden="true"></span>
-        Location
+        Extra?
       </a>
       <a class="mdc-tab" role="tab" aria-controls="panel-3">
         <span class="far fa-edit fa-fw" aria-hidden="true"></span>
@@ -56,7 +56,7 @@
         </div>
         <div class="detailed-info">
           {{#if description ~}}
-          <h4 class="mdc-typography--headline6">Role</h4>
+          <h4 class="mdc-typography--headline6">Summary</h4>
           <div class="mdc-typography--body1">
             {{{description}}}
           </div>
@@ -74,22 +74,7 @@
       </div>
       <div class="panel mdc-card--full-content mdc-typography--body1" role="tabpanel" aria-hidden="true" id="panel-2">
         <div class="detailed-info">
-          {{#if geo_fund_coords}}
-          {{#each geo_fund_coords}}
-          <p>
-            <strong>TODO:</strong> Map of fund location(s)
-          </p>
-          <p>
-            Latitude:{{lat}}<br />
-            Longitude:{{lon}}
-          </p>
-          {{/each}}
-          {{else}}
-          <p>
-            <strong>TODO:</strong> text explaining they have no location entered other than
-            "{{location}}"
-          </p>
-          {{/if}}
+
         </div>
       </div>
       <div class="panel mdc-card--full-content mdc-typography--body1" role="tabpanel" aria-hidden="true" id="panel-3">
@@ -105,7 +90,7 @@
     </div>
     <div class="mdc-card__actions">
       <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-        <a href="/funder/{{funder.slug}}" class="mdc-card__action">Find out more about {{funder.name}}</a>
+        <a href="/funder/{{funder_organisation.slug}}" class="mdc-card__action">Find out more about {{funder_organisation.name}}</a>
       </div>
       <div class="mdc-card__action-icons mdc-chip-set pull-right">
         <div class="mdc-chip" onclick="goodmoves.toggleShortlistItem('{{Id}}');" data-mdc-auto-init="MDCChip">
