--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -2,8 +2,8 @@ $mdc-theme-primary: #00796A;
 $mdc-theme-primary-light: #198678;
 $mdc-theme-primary-dark: #006054;
 
-$mdc-theme-complimentary: rgba(0,121,106,0.89);
-$mdc-theme-complimentary-light: rgba(0,121,106,0.91);
+$mdc-theme-complimentary: #b2cfcb;
+$mdc-theme-complimentary-light: #e5efed;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
 $mdc-theme-secondary-light: #F5F5F5; // Gray 100
@@ -628,15 +628,15 @@ a {
   .mdc-card__media--funder {
     margin-right: $unit;
   }
-  .search-result-article__snippet {
-    padding: $unit;
-    background-color: $mdc-theme-complimentary-light;
-  }
+  // .search-result-article__snippet {
+  //   padding: $unit;
+  //   background-color: $mdc-theme-complimentary-light;
+  // }
   .user-notes {
     display: none;
   }
   .mdc-card__actions {
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-light;
     .mdc-card__action {
       color: $mdc-theme-primary-dark;
     }
