--- a/sites/configurations/fundingscotland/partials/fund-search-results.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-results.hbs
@@ -15,11 +15,9 @@
       <div class="mdc-select mdc-select--box pull-right" data-mdc-auto-init="MDCSelect">
         <select class="mdc-select__native-control" id="sort" name="sort">
           <option value="undefined">Relevance</option>
-          <option value="closing_date-asc">Closing soon</option>
+          <option value="date_deadline-asc">Deadline soon</option>
           <option value="start_at-desc">Newest</option>
           <option value="start_at-asc">Oldest</option>
-          <option value="salary_min-desc">Salary - high to low</option>
-          <option value="salary_min-asc">Salary - low to high</option>
         </select>
         <label class="mdc-floating-label mdc-floating-label--float-above" for="sort">
           Sort
