--- a/sites/configurations/fundingscotland/templates/pages/home.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/home.hbs
@@ -9,7 +9,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <h1 class="header-text">
                 <span class="header-text-banner">
-                  <span class="normal welcome">Welcome to</span><br /><span class="normal moves">Funding Scotland</span>
+                  <span class="normal welcome">Welcome to</span><br /><span class="normal brand">Funding Scotland</span>
                 </span>
               </h1>
               <p class="header-extra">
