--- a/sites/configurations/fundingscotland/templates/pages/browse.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/browse.hbs
@@ -3,13 +3,13 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
         <div class="browse-title mdc-typography--headline5">
-          Roles
+          Activities
         </div>
         <ul class="mdc-list">
-          {{#each data.supplimentaryResponses.types.aggregations.roles_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?role={{urlencode key}}" role="menuitem">
+          {{#each data.supplimentaryResponses.types.aggregations.activities_slugs.buckets ~}}
+          <a class="mdc-list-item" href="/search?activity={{urlencode key}}" role="menuitem">
             <span class="mdc-list-item__text">
-              {{#with (lookup ../data.supplimentaryResponses.types.aggregations.roles.buckets @index) ~}}
+              {{#with (lookup ../data.supplimentaryResponses.types.aggregations.activities.buckets @index) ~}}
               {{{key}}}
               {{/with ~}}
             </span>
@@ -22,32 +22,13 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
         <div class="browse-title mdc-typography--headline5">
-          Sectors
+          Beneficiaries
         </div>
         <ul class="mdc-list">
-          {{#each data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?sector={{urlencode key}}" role="menuitem">
+          {{#each data.supplimentaryResponses.types.aggregations.beneficiaries_slugs.buckets ~}}
+          <a class="mdc-list-item" href="/search?beneficiary={{urlencode key}}" role="menuitem">
             <span class="mdc-list-item__text">
-              {{#with (lookup ../data.supplimentaryResponses.types.aggregations.sectors.buckets @index) ~}}
-              {{{key}}}
-              {{/with ~}}
-            </span>
-            <span class="mdc-list-item__meta">
-              {{doc_count}}
-            </span>
-          </a>
-          {{/each ~}}
-        </ul>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-        <div class="browse-title mdc-typography--headline5">
-          Statuses
-        </div>
-        <ul class="mdc-list">
-          {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?status={{urlencode key}}" role="menuitem">
-            <span class="mdc-list-item__text">
-              {{#with (lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) ~}}
+              {{#with (lookup ../data.supplimentaryResponses.types.aggregations.beneficiaries.buckets @index) ~}}
               {{{key}}}
               {{/with ~}}
             </span>
