--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -989,6 +989,29 @@ figure {
   }
 }
 
+.login-form {
+  margin: 10vh auto;
+  .mdc-card {
+    position: relative;
+  }
+  #login-message {
+    display: none;
+  }
+}
+
+.card-loader {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.75);
+  opacity: 0.7;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  .card-loader-inner {
+  }
+}
+
 .search-page {
   .page-content {
     h2 {
