--- a/sites/configurations/fundingscotland/templates/account/login.hbs
+++ b/sites/configurations/fundingscotland/templates/account/login.hbs
@@ -55,7 +55,7 @@
         var password = $password.val();
         $loader.css('display', 'flex');
         evt.preventDefault();
-        goodmoves.app.auth().signInWithEmailAndPassword(email, password).then(function(user) {
+        fundingscotland.app.auth().signInWithEmailAndPassword(email, password).then(function(user) {
           if (user) {
             window.location.href = '/';
           } else {
