--- a/sites/configurations/scvo/templates/account/logout.hbs
+++ b/sites/configurations/scvo/templates/account/logout.hbs
@@ -1,7 +1,7 @@
   <form id="logout-form" method="POST" class="logout-form">
     <div class="mdc-card">
-      <div class="mdc-card__info--fund">
-        <div class="mdc-card__info--fund-title mdc-typography--headline4">
+      <div class="mdc-card__info--vacancy">
+        <div class="mdc-card__info--vacancy-title mdc-typography--headline4">
           Logging out&hellip;
         </div>
       </div>
@@ -10,9 +10,9 @@
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
       window.setTimeout(function() {
-        goodmoves.app.auth().signOut().then(function() {
+        scvo.app.auth().signOut().then(function() {
           window.location.href = '/';
-          goodmoves.setCookie('gm_token');
+          scvo.setCookie('gm_token');
         }).catch(function(err) {
           console.error('Error logging out:', err);
         });
