--- a/sites/configurations/goodmoves/partials/event-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/event-search-form.hbs
@@ -1,6 +1,6 @@
 <aside class="mdc-drawer mdc-drawer--permanent mdc-elevation--z4">
   <div class="mdc-drawer__content">
-    <h2 class="mdc-drawer__content-heading hide-sm">Search training courses</h2>
+    <h2 class="mdc-drawer__content-heading hide-sm">Search SCVO training courses</h2>
     <form action="/training" method="GET">
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
@@ -15,7 +15,8 @@
 
       <div class="h-margin v-margin">
         <button class="mdc-button mdc-button--raised mdc-button--fullwidth" type="submit" id="{{instance_id}}-search-submit">
-          Search training courses
+          <span class="far fa-search fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
+          Search
         </button>
       </div>
     </form>
