--- a/sites/configurations/digitalparticipation/templates/resources-detail.hbs
+++ b/sites/configurations/digitalparticipation/templates/resources-detail.hbs
@@ -191,6 +191,8 @@
 
       <h3>Other evidence</h3>
 
+      <p><a href="https://bit.ly/2AFUI3a">Social Justice in the Digital Age</a> - The Centre for Social Justice (2017)</p>
+
       <p><a href="https://www.ofcom.org.uk/research-and-data/multi-sector-research/access-and-inclusion?utm_source=updates&utm_medium=email&utm_campaign=access%2C%20inclusion%20and%20affordability.%20">Access and inclusion report</a> - Ofcom (2017)</p>
 
       <p><a href="https://www.ofcom.org.uk/research-and-data/cmr/communications-market-reports">Communications Market Reports / Media Literacy / Telecoms Data reports</a> - Ofcom (2017)</p>
@@ -215,7 +217,7 @@
 
       <p><a href="https://www.goodthingsfoundation.org/research-publications/reboot-uk-interim-findings">Reboot UK Findings</a> - Good Things Foundation (2016)</p>
 
-      <p><a href="https://storage.googleapis.com/digitalparticipation/reports/StoriesfromtheDigitalDivide-QuarriersworkingwithGCIL2016.pdf" download>Stories from the Digital Divide - Quarriers working with Glasgow Centre for Inclusive Living (2016)</a>
+      <p><a href="https://storage.googleapis.com/digitalparticipation/reports/Stories_from_the_Digital_Divide.pdf" download>Stories from the Digital Divide - Quarriers working with Glasgow Centre for Inclusive Living (2016)</a>
 
         <p><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/householdcharacteristics/homeinternetandsocialmediausage/bulletins/internetaccesshouseholdsandindividuals/2016">Internet access in Great Britain: 2016</a> - Office for National Statistics (2016)</p>
 
