--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -6,117 +6,40 @@
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
-    <li class="mdc-list-item mdc-ripple-upgraded">
-      <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-      <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
-            <span class="mdc-list-item__text">
-              Manager
-              <span class="mdc-list-item__secondary-text">
-                Glasgow
-              </span>
-            </span>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-            <div class="mdc-switch">
-              <input type="checkbox" id="email-switch" class="mdc-switch__native-control" role="switch" checked="checked">
-              <div class="mdc-switch__background">
-                <div class="mdc-switch__knob"></div>
+    {{#each data.notifications.saved_searches}}
+      {{!-- {{#querystring querystring}} --}}
+        <li class="mdc-list-item mdc-ripple-upgraded">
+          <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
+          <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
+                <span class="mdc-list-item__text">
+                  <a href="/search?{{{qeuerystring}}}">{{name}}</a>
+                  <span class="mdc-list-item__secondary-text">
+                    {{this.querystring}}
+                  </span>
+                </span>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+                <div class="mdc-switch">
+                  <input type="checkbox" id="email-switch" class="mdc-switch__native-control" role="switch" checked="checked">
+                  <div class="mdc-switch__background">
+                    <div class="mdc-switch__knob"></div>
+                  </div>
+                </div>
+                <label for="email-switch">
+                  <span class="far fa-envelope"></span>
+                </label>
               </div>
             </div>
-            <label for="email-switch">
-              <span class="far fa-envelope"></span>
-            </label>
           </div>
-        </div>
-      </div>
-      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
-    </li>
-    <li class="mdc-list-divider" role="separator"></li>
-    <li class="mdc-list-item mdc-ripple-upgraded">
-      <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-      <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
-            <span class="mdc-list-item__text">
-              IT Manager
-              <span class="mdc-list-item__secondary-text">
-                Edinburgh, Glasgow
-              </span>
-            </span>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-            <div class="mdc-switch">
-              <input type="checkbox" id="email-switch2" class="mdc-switch__native-control" role="switch" checked="checked">
-              <div class="mdc-switch__background">
-                <div class="mdc-switch__knob"></div>
-              </div>
-            </div>
-            <label for="email-switch2">
-              <span class="far fa-envelope"></span>
-            </label>
-          </div>
-        </div>
-      </div>
-      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
-    </li>
-    <li class="mdc-list-divider" role="separator"></li>
-    <li class="mdc-list-item mdc-ripple-upgraded">
-      <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-      <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
-            <span class="mdc-list-item__text">
-              (no keywords)
-              <span class="mdc-list-item__secondary-text">
-                Glasgow, Manager
-              </span>
-            </span>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-            <div class="mdc-switch">
-              <input type="checkbox" id="email-switch3" class="mdc-switch__native-control" role="switch">
-              <div class="mdc-switch__background">
-                <div class="mdc-switch__knob"></div>
-              </div>
-            </div>
-            <label for="email-switch3">
-              <span class="far fa-envelope"></span>
-            </label>
-          </div>
-        </div>
-      </div>
-      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
-    </li>
-    <li class="mdc-list-divider" role="separator"></li>
-    <li class="mdc-list-item mdc-ripple-upgraded">
-      <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
-      <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
-            <span class="mdc-list-item__text">
-              Trustee
-              <span class="mdc-list-item__secondary-text">
-                Edinburgh
-              </span>
-            </span>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-            <div class="mdc-switch">
-              <input type="checkbox" id="email-switch4" class="mdc-switch__native-control" role="switch" checked="checked">
-              <div class="mdc-switch__background">
-                <div class="mdc-switch__knob"></div>
-              </div>
-            </div>
-            <label for="email-switch4">
-              <span class="far fa-envelope"></span>
-            </label>
-          </div>
-        </div>
-      </div>
-      <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
-    </li>
+          <span class="saved-search-remove mdc-list-item__meta far fa-trash-alt" aria-hidden="true"></span>
+        </li>
+      {{!-- {{/querystring}} --}}
+      {{#unless @last}}
+        <li class="mdc-list-divider" role="separator"></li>
+      {{/unless}}
+    {{/each}}
   </ul>
 
   <h2 class="mdc-typography--headline4 v-margin">
