Fixed typo in saved searches

--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -14,7 +14,7 @@
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone saved-search">
                 <span class="mdc-list-item__text">
-                  <a href="/search?{{{qeuerystring}}}">{{name}}</a>
+                  <a href="/search?{{{this.querystring}}}">{{name}}</a>
                   <span class="mdc-list-item__secondary-text">
                     {{this.querystring}}
                   </span>
