--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -4,12 +4,14 @@
 
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="/save-search{{{@root.request.url.search}}}" class="mdc-button mdc-button--raised save-search mdc-ripple-surface mdc-ripple-surface--primary" data-mdc-auto-init="MDCRipple">
-        <span class="far fa-cog fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
-        Save search
-      </a>
-    </div>
+    <form class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" action="/save-search{{{@root.request.url.search}}}" method="POST">
+      <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
+        <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input">
+        <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
+        <button class="mdc-icon-button mdc-text-field__icon fas fa-save" tabindex="0" role="role"></button>
+        <div class="mdc-line-ripple"></div>
+      </div>
+    </form>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       {{> pagination paging=data.search_data.detailed_results.pagination}}
     </div>
