Get saved searches now a common task

--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -6,7 +6,7 @@
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
-    {{#each data.notifications.saved_searches}}
+    {{#each data.saved_searches.items}}
       {{!-- {{#querystring querystring}} --}}
         <li class="mdc-list-item mdc-ripple-upgraded">
           <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
