Moved KeyStone section, updated menus

--- a/sites/configurations/goodmoves/templates/account/login.hbs
+++ b/sites/configurations/goodmoves/templates/account/login.hbs
@@ -36,7 +36,7 @@
       </div>
       <div class="card-loader" id="login-loader">
         <div class="card-loader-inner">
-          <span class="far fa-2x fa-spinner fa-spin"></span>
+          <span class="far fa-2x fa-circle-notch fa-spin"></span>
         </div>
       </div>
     </div>
