--- a/sites/configurations/scvo/templates/pages/page-running-keystone.hbs
+++ b/sites/configurations/scvo/templates/pages/page-running-keystone.hbs
@@ -8,7 +8,7 @@
           {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone content sidebar page-sidebar">
-          {{> menu_services_keystone}}
+          {{> menu_running_keystone}}
         </div>
       </div>
     </div>
