--- a/sites/configurations/goodmoves/templates/pages/browse.hbs
+++ b/sites/configurations/goodmoves/templates/pages/browse.hbs
@@ -41,7 +41,7 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
         <div class="browse-title mdc-typography--headline5">
-          Types
+          Working patterns
         </div>
         <ul class="mdc-list">
           {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
