--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -8,7 +8,9 @@
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
         <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input">
         <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
-        <button class="mdc-icon-button mdc-text-field__icon fas fa-save" tabindex="0" role="role"></button>
+        <button class="mdc-icon-button mdc-text-field__icon" tabindex="0" role="role">
+          <span class="far fa-save" aria-hidden="true"></span>
+        </button>
         <div class="mdc-line-ripple"></div>
       </div>
     </form>
