--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -6,7 +6,7 @@
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
-    <li class="mdc-list-item mdc-ripple-upgraded">
+    <li class="mdc-list-item">
       <span class="mdc-list-item__graphic far" aria-hidden="true"></span>
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
@@ -14,12 +14,14 @@
             <span class="mdc-list-item__text">
               <strong>Search name</strong>
               <span class="mdc-list-item__secondary-text">
-                Search
+                Search parameters
               </span>
             </span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-            Add to email alert
+            <span class="mdc-list-item__secondary-text">
+              Add to email alert
+            </span>
           </div>
         </div>
       </div>
