--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -399,7 +399,7 @@ footer h3,
     margin-bottom: $unit/2;
     .mdc-text-field,
     .mdc-select {
-      margin-top: 0;
+      margin-top: $unit/2;
     }
     .mdc-button.save-search {
       margin-top: $unit;
@@ -860,6 +860,12 @@ hr {
 .mdc-icon-button {
   border: none;
   background: transparent;
+  font-size: 1.5rem;
+  bottom: 8px !important;
+  right: 8px !important;
+}
+.mdc-icon-button:focus {
+  outline: none;
 }
 
 .drawer-container {
